# Server-Client-socet

./: README.md
Program_1_server/: CMakeLists.txt
Program_1_server/sources/: inputhandler.cpp  inputhandler.h  main.cpp  outputhandler.cpp  outputhandler.h  server.cpp  server.h  sharedbuffer.h
Program_2_client/: CMakeLists.txt
Program_2_client/sources/: client.cpp  client.h  main.cpp
